# nemucast

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: functions.md
src/nemucast/: __init__.py  __main__.py  cast_client.py  cli.py  config.py  main.py  state.py  volume.py
tests/: conftest.py  test_args.py  test_cast_client.py  test_cli.py  test_refactored_functions.py  test_state.py  test_volume.py  test_volume_control.py
