[project]
name = "nemucast"
version = "0.1.0"
description = "ねむキャス - Chromecast/Google TVの音量を徐々に下げて自動的にスタンバイモードにするツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pychromecast>=14.0.7",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]
package = true

[project.scripts]
nemucast = "nemucast.main:main"
nemucast-cron-20 = "nemucast.main:main_cron_20"
nemucast-cron-0030 = "nemucast.main:main_cron_0030"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
